fixed all contrast issues

--- a/main.css
+++ b/main.css
@@ -39,6 +39,7 @@ header {
 .required-header-text{
   margin-left: 10px;
   margin-right: 10px;
+  padding-bottom: 10px;
 }
 
 h1{
@@ -192,12 +193,16 @@ h2 {
   grid-column: 2;
 }
 
-.project-link :link, .project-link :visited{
+.project-link :link, .project-link :visited {
   color: #564D80;
   text-decoration: none;
+  border: solid #564D80 1px;
+  padding: 3px;
+  border-radius: 10%;
+  background-color: #D5D6D2;
 }
 
-#comingsoontitle{
+#comingsoontitle {
   visibility: hidden;
 }
 
@@ -206,7 +211,7 @@ h2 {
   padding-top: 10%;
   transform: rotate(15deg);
   padding-left: 10%;
-  color: #756867;
+  color: #353C3F;
 }
 
 li {
@@ -353,7 +358,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-bottom: 150px;
+    padding-bottom: 200px;
   }
   
   .undergrad, .grad {
